--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
       <div id="home" class="button1 line start">
         <button id="Aboutme">About</button>
       </div>
-        <div id="contact" class="button1 line mid">
+        <div id="portfolio" class="button1 line mid">
          <button id="btn_Course">Skills</button>
       </div>
-        <div id="contact" class="button1 line mid">
+        <div id="portfolio" class="button1 line mid">
          <button id="btn_results">Experience</button>
       </div>
       <div id="portfolio" class="button1 line mid">
