--- a/index.html
+++ b/index.html
@@ -489,13 +489,13 @@
     <div id="form-main">
     <form class="form" id="form1">  
       <p class="name">
-        <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" />
+        <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name<span style = "color: red">Not working</span>" id="name" />
       </p>
       <p class="email">
-        <input name="email" type="text" class="validate[required,custom[email]] feedback-input" id="email" placeholder="Email" />
+        <input name="email" type="text" class="validate[required,custom[email]] feedback-input" id="email" placeholder="Email<span style = "color: red">Not working</span>" />
       </p>
       <p class="text">
-        <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
+        <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment<span style = "color: red">Not working</span>"></textarea>
       </p>
       <div class="submit" style="width: 20vw" >
         <input type="submit" value="SEND" id="button-blue"/>
