--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                         <p style="color: #010101; margin-top: 0%; font-size: 1vw;">
                         <b>Position :</b>Wordpress Intern
                             <br>
-                        <b>Date :</b>March 2017
+                        <b>Date :</b>March 2017 – July 2017
                             <br>
                             <b>Roles & Responsibilities </b>
                             <br>
@@ -444,7 +444,7 @@
                         <p style="color: #010101; font-size: 1vw">
                         <b>Position :</b>.Net Developer (Student Intern)
                             <br>
-                        <b>Date :</b>October 2016
+                        <b>Date :</b>September 2016 – Dec 2016
                             <br>
                             <b>Roles & Responsibilities </b>
                             <br>
