--- a/index.html
+++ b/index.html
@@ -554,9 +554,9 @@
             <h1 class="title" style="margin-top:-7%" >Experience</h1>
             <h1 style="text-align: center; margin-bottom: 0%">
             <a href="http://www.lumico.co.za" target="blank"><img src="Logo/LumicoLogo_2015-01.png" style="width: 55%; height: auto; margin-left: -5%;"></a>
-            <p>March 2017</p>
+            <p>March 2017 – July 2017</p>
             <a href="http://www.warpdevelopment.co.za/" target="blank"><img src="Logo/Untitled-1.png" style="width: 55%; height: auto; margin-left: 1%;"></a>
-            <p>October 2016</p>
+            <p>September 2016 – December 2016</p>
             </h1>
             <h1 class="title">Level</h1>
             <h2>Junior</h2>
