--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <td class ="Personal_infor">
            
             <div>
-                    <p><img src="Images/PP.jpg" class= "Img_"></p>
-                    <p><img src="Images/PP.jpg" class= "Img_mobile"></p>
+                    <p><img src="Images/Vhusani_image.jpg" class= "Img_"></p>
+                    <p><img src="Images/Vhusani_image.jpg" class= "Img_mobile"></p>
                 </div> 
 
                 <h1>N A M E</h1>
