--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
          <button id="btn_Course" >Skills</button>
       </div>
         <div id="portfolio" class="button1 line mid">
-         <button id="btn_results" >Experience</button>
+         <button id="btn_results" >Projects</button>
       </div>
       <div id="portfolio" class="button1 line mid">
          <button id="btn_CV" >Resume</button>
