--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 <a href="https://vhusani.github.io/ADHB/"><h1>Intranet 1</h1></a>
 <a href="https://vhusani.github.io/SuntoryUN_page1/"><h1>Intranet 2</h1></a> 
 <a href="https://vhusani.github.io/SpectrumR_page1"><h1>Intranet 3</h1>></a>
-<a href="https://vhusani.github.io/SpectrumR/">Intranet 4</a>  
+<a href="https://vhusani.github.io/SpectrumR/"><h1>Intranet 4</h1></a>  
 <a href="https://vhusani.github.io/vhusanis-snake-bite-game/"><h1>Game</h1></a>   
 </td>
 
