--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
                      <tr>
                              <td>
-            <H2>INTRANETS</H2>
+            <H2>Intranets</H2>
 <a href="https://vhusani.github.io/ADHB/"><h3>Intranet 1</h3></a>
 <a href="https://vhusani.github.io/SuntoryUN_page1/"><h3>Intranet 2</h3></a> 
 <a href="https://vhusani.github.io/SpectrumR_page1"><h3>Intranet 3</h3></a>
@@ -446,7 +446,7 @@
 </td>
 
 <td>
-<H2>WEBSITES</H2>
+<H2>Websites</H2>
 <a href="http://testsite.streetlight-designs.com/"><h3>Streetlight Consult</h3></a>
 <a href="http://ssaniconsult.co.za/"><h3>Ssaniconsult</h3></a>
 <a href="https://www.dlonra.co.za/"><h3>Dlonra</h3 ></a>
