--- a/index.html
+++ b/index.html
@@ -434,7 +434,9 @@
                      <tr>
                              <td>
             <H2>Intranets</H2>
+ <img src = "images/monitor-and-computer-mouse.png" style = " width: 50px; height: auto">
 <a href="https://vhusani.github.io/ADHB/"><h3>Intranet 1</h3></a>
+<img src = "images/monitor-and-computer-mouse.png" style = " width: 50px; height: auto">
 <a href="https://vhusani.github.io/SuntoryUN_page1/"><h3>Intranet 2</h3></a> 
 <a href="https://vhusani.github.io/SpectrumR_page1"><h3>Intranet 3</h3></a>
 <a href="https://vhusani.github.io/SpectrumR/"><h3>Intranet 4</h3></a>  
