--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 <div id="Cvdiv" style="background-color: #888b89; width:auto; display: none; margin-left: 12%; margin-right:7%;border-radius: 12px; ">
                     <br>
                     <br>
-    <iframe src="https://docs.google.com/viewer?srcid=1LJnbBOey0wFVcZrQjtJL4SiKTU9tclU&pid=explorer&efh=false&a=v&chrome=false&embedded=true" style = "width:59.7vw; height: 25vw;vertical-align: middle;margin-left: 4%;"> 
+    <iframe src="https://drive.google.com/file/d/1LJnbBOey0wFVcZrQjtJL4SiKTU9tclU-/preview" style = "width:59.7vw; height: 25vw;vertical-align: middle;margin-left: 4%;"> 
             <p style="font-size: 110%;"><em><strong>ERROR: </strong>  
             An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most       recent version and try again.</p>
     </iframe>
