--- a/index.html
+++ b/index.html
@@ -192,10 +192,11 @@
                            Cape Town, South Africa
                         </h2>
                          <div class = "content">
-                <p style="font-size:vw; color: #dba30e; margin-bottom: 0vw;  width: 99%;">A happy guy, coffee addicted, loves programing and technology in general. <br>Mostly, I try to learn everything I can. I believe getting your hands dirty is the best way to learn new things.
-                Most of my coding experience were built upon C# & SQL Development, but I have played in the past with some other things like Php, Wordpress and Java.
-                <br>I'm open minded to new technologies, but systems development and web development are the two things I am focused on recently.
-                I'm a hard worker, committed and a self learner. Thing is, I'm not a guru jedi rockstar ninja, but I always get my stuff done.</p>
+                <p style="font-size:vw; color: #dba30e; margin-bottom: 0vw;  width: 99%;">Vhusani is a junior front-end developer with 2 year’s experience in UI design and development and is MCP, 
+                      MSCA and MCSD certified. He is experienced in HTML, CSS and Java script, and has done development in C# and SQL. 
+                      He also has product experience on SharePoint, WordPress and PlanetPress. 
+                      Vhusani has worked with multiple clients in South Africa, New Zealand, the USA, Japan and the UK, building and maintaining intranets, 
+                      websites and web applications.</p>
                              <br>
                              <h2>
                                 
