--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                            Cape Town, South Africa
                         </h2>
                          <div class = "content">
-                <p style="font-size:vw; color: #dba30e; margin-bottom: 0vw;  width: 99%;">Vhusani is a junior front-end developer with 2 year’s experience in UI design and development and is MCP, 
+                <p style="font-size:vw; color: #dba30e; margin-bottom: 0vw;  width: 99%;">Vhusani is a junior front-end/ back-end developer with 2 year’s experience in UI design and development and is MCP, 
                       MSCA and MCSD certified. He is experienced in HTML, CSS and Java script, and has done development in C# and SQL. 
                       He also has product experience on SharePoint, WordPress and PlanetPress. 
                       Vhusani has worked with multiple clients in South Africa, New Zealand, the USA, Japan and the UK, building and maintaining intranets, 
