--- a/index.html
+++ b/index.html
@@ -449,18 +449,18 @@
 <div align="center" class="fond">
 <div style="width:1000px;">
 
-<div class="style_prevu_kit" style="background-color:#00628B;"></div>
-<div class="style_prevu_kit" style="background-color:#dba30e;"></div>
-<div class="style_prevu_kit" style="background-color:#444745;"></div>
-<div class="style_prevu_kit" style="background-color:#00a096;"></div>
+<div class="style_prevu_kit" style="background-color:#00628B;"><a href="#" style=" color: #fff;">Intranet 1</a></div>
+<div class="style_prevu_kit" style="background-color:#dba30e;"><a href="#" style=" color: #fff;">Intranet 2</a></div>
+<div class="style_prevu_kit" style="background-color:#444745;"><a href="#" style=" color: #fff;">Intranet 3</a></div>
+<div class="style_prevu_kit" style="background-color:#00a096;"><a href="#" style=" color: #fff;">Intranet 4</a></div>
 
 </div>
       
 <div style="width:1000px;">
-<div class="style_prevu_kit" style="background-color:#00a096;"></div> 
-      <div class="style_prevu_kit" style="background-color:#444745;"></div>     
-<div class="style_prevu_kit" style="background-color:#dba30e;"></div>          
-<div class="style_prevu_kit" style="background-color:#00628B;"></div>
+<div class="style_prevu_kit" style="background-color:#00a096;"><a href="#" style=" color: #fff;">Intranet 5</a></div> 
+      <div class="style_prevu_kit" style="background-color:#444745;"><a href="#" style=" color: #fff;">Intranet 6</a></div>     
+<div class="style_prevu_kit" style="background-color:#dba30e;"><a href="#" style=" color: #fff;">Intranet 7</a></div>          
+<div class="style_prevu_kit" style="background-color:#00628B;"><a href="#" style=" color: #fff;">Intranet 8</a></div>
 
 
 
