--- a/index.html
+++ b/index.html
@@ -449,18 +449,18 @@
 <div align="center" class="fond">
 <div style="width:1000px;">
 
-<div class="style_prevu_kit" style="background-color:#00628B;"><a href="#" style=" color: #fff;"><h2>Intranet 1<h2></a></div>
-<div class="style_prevu_kit" style="background-color:#dba30e;"><a href="#" style=" color: #fff;"><h2>Intranet 2<h2></a></div>
-<div class="style_prevu_kit" style="background-color:#444745;"><a href="#" style=" color: #fff;"><h2>Intranet 3<h2></a></div>
-<div class="style_prevu_kit" style="background-color:#00a096;"><a href="#" style=" color: #fff;"><h2>Intranet 4<h2></a></div>
+<div class="style_prevu_kit" style="background-color:#00628B;"><a href="#" style=" color: #fff;"><h2 style = "color: #fff">Intranet 1<h2></a></div>
+<div class="style_prevu_kit" style="background-color:#dba30e;"><a href="#" style=" color: #fff;"><h2 style = "color: #fff">Intranet 2<h2></a></div>
+<div class="style_prevu_kit" style="background-color:#444745;"><a href="#" style=" color: #fff;"><h2 style = "color: #fff">Intranet 3<h2></a></div>
+<div class="style_prevu_kit" style="background-color:#00a096;"><a href="#" style=" color: #fff;"><h2 style = "color: #fff">Intranet 4<h2></a></div>
 
 </div>
       
 <div style="width:1000px;">
-<div class="style_prevu_kit" style="background-color:#00a096;"><a href="#" style=" color: #fff;"><h2>Intranet 5<h2></a></div> 
-      <div class="style_prevu_kit" style="background-color:#444745;"><a href="#" style=" color: #fff;"><h2>Intranet 6<h2></a></div>     
-<div class="style_prevu_kit" style="background-color:#dba30e;"><a href="#" style=" color: #fff;"><h2>Intranet 7<h2></a></div>          
-<div class="style_prevu_kit" style="background-color:#00628B;"><a href="#" style=" color: #fff;"><h2>Intranet 8<h2></a></div>
+<div class="style_prevu_kit" style="background-color:#00a096;"><a href="#" style=" color: #fff;"><h2 style = "color: #fff">Intranet 5<h2></a></div> 
+      <div class="style_prevu_kit" style="background-color:#444745;"><a href="#" style=" color: #fff;"><h2 style = "color: #fff">Intranet 6<h2></a></div>     
+<div class="style_prevu_kit" style="background-color:#dba30e;"><a href="#" style=" color: #fff;"><h2 style = "color: #fff">Intranet 7<h2></a></div>          
+<div class="style_prevu_kit" style="background-color:#00628B;"><a href="#" style=" color: #fff;"><h2 style = "color: #fff">Intranet 8<h2></a></div>
 
 
 
