--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
          <button id="btn_CV" >Resume</button>
       </div>
       <div id="other" class="button1 line end">
-         <button id="btn_Contact"  >Contact</button>
+         <button href ="https://www.linkedin.com/in/vhusani-libago-6a1189123/" >Contact</button>
       </div>
     </div>
   </div> 
