--- a/index.html
+++ b/index.html
@@ -455,10 +455,10 @@
 <div align="center" class="fond">
 <div style="width:1000px;">
 
-<div class="style_prevu_kit" style="background-color:#00628B;"><a href="#" style=" color: #fff;"><h2 style="color: #fff;font-size: 27px;padding-top: 20px;">Intranet 1</h2></a></div>
-<div class="style_prevu_kit" style="background-color:#dba30e;"><a href="#" style=" color: #fff;"><h2 style="color: #fff;font-size: 27px;padding-top: 20px;">Intranet 1</h2></a></div>
-<div class="style_prevu_kit" style="background-color:#444745;"><a href="#" style=" color: #fff;"><h2 style="color: #fff;font-size: 27px;padding-top: 20px;">Intranet 1</h2></a></div>
-<div class="style_prevu_kit" style="background-color:#00a096;"><a href="#" style=" color: #fff;"><h2 style="color: #fff;font-size: 27px;padding-top: 20px;">Intranet 1</h2></a></div>
+<div class="style_prevu_kit" style="background-color:#00628B;"><a href="https://vhusani.github.io/ADHB/"  target="blank" style=" color: #fff;"><h2 style="color: #fff;font-size: 27px;padding-top: 20px;">Intranet 1</h2></a></div>
+<div class="style_prevu_kit" style="background-color:#dba30e;"><a href="https://vhusani.github.io/SuntoryUN_page1/" target="blank" style=" color: #fff;"><h2 style="color: #fff;font-size: 27px;padding-top: 20px;">Intranet 2</h2></a></div>
+<div class="style_prevu_kit" style="background-color:#444745;"><a href="https://vhusani.github.io/SpectrumR_page1/" target="blank" style=" color: #fff;"><h2 style="color: #fff;font-size: 27px;padding-top: 20px;">Intranet 3</h2></a></div>
+<div class="style_prevu_kit" style="background-color:#00a096;"><a href="https://vhusani.github.io/SpectrumR/" target="blank" style=" color: #fff;"><h2 style="color: #fff;font-size: 27px;padding-top: 20px;">Intranet 4</h2></a></div>
 
 </div>
       <br>
