--- a/index.html
+++ b/index.html
@@ -164,16 +164,13 @@
       </div>
         <div id="portfolio" class="button1 line mid">
          <button id="btn_Course" >Skills</button>
-      </div>
-        <div id="portfolio" class="button1 line mid">
-         <button id="btn_results" >Projects</button>
-      </div>
+
           
                 <div id="portfolio" class="button1 line mid">
          <button id="btn_CV" >Resume</button>
       </div>
       <div id="other" class="button1 line end">
-         <button href ="https://www.linkedin.com/in/vhusani-libago-6a1189123/" >Contact</button>
+         <button onlcik ="window.location.href='https://www.linkedin.com/in/vhusani-libago-6a1189123/'" >Contact</button>
       </div>
     </div>
   </div> 
