--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
          <button id="btn_CV" >Resume</button>
       </div>
       <div id="other" class="button1 line end">
-         <button onlcik ="window.location.href='https://www.linkedin.com/in/vhusani-libago-6a1189123/'" >Contact</button>
+         <button id="ContactDiv" >Contact</button>
       </div>
     </div>
   </div> 
