--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
       </div>
         <div id="portfolio" class="button1 line mid">
          <button id="btn_Course" >Skills</button>
+          </div>
 
           
                 <div id="portfolio" class="button1 line mid">
